Fixed video on Firefox

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -355,6 +355,10 @@ ul {
 }
 #video-container {
 	z-index: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
 }
 #video {
 	position: absolute;
